...
@Composable
fun SplashView(
    drawableId: Int = R.drawable.your_logo_light,
    title: String,
    versionText: String,
    subTitle: String,
    buttonText: String = "Open source licences",
    licenceText: String = "",
) {
    var showDialog by remember { mutableStateOf(false) }

    if (showDialog) {
        OpenSourceLicencesAlertMessage(
...
